// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDeleteActionViewTableData should handle tasks with prefix keys 1`] = `
[
  {
    "content": [
      {
        "content": {
          "icon": "action-queued",
          "text": "file1.txt",
        },
        "key": "key-1",
        "type": "text",
      },
      {
        "content": {
          "text": "",
        },
        "key": "folder-1",
        "type": "text",
      },
      {
        "content": {
          "text": "txt",
        },
        "key": "type-1",
        "type": "text",
      },
      {
        "content": {
          "text": "1.0 kB",
        },
        "key": "size-1",
        "type": "text",
      },
      {
        "content": {
          "text": "Queued",
        },
        "key": "status-1",
        "type": "text",
      },
      {
        "content": {
          "ariaLabel": "Cancel item: folder/subfolder/file1.txt",
          "disabled": false,
          "icon": "cancel",
          "onClick": [Function],
        },
        "key": "action-1",
        "type": "button",
      },
    ],
    "key": "1",
  },
  {
    "content": [
      {
        "content": {
          "icon": "action-success",
          "text": "file2.jpg",
        },
        "key": "key-2",
        "type": "text",
      },
      {
        "content": {
          "text": "",
        },
        "key": "folder-2",
        "type": "text",
      },
      {
        "content": {
          "text": "jpg",
        },
        "key": "type-2",
        "type": "text",
      },
      {
        "content": {
          "text": "1.0 kB",
        },
        "key": "size-2",
        "type": "text",
      },
      {
        "content": {
          "text": "Completed",
        },
        "key": "status-2",
        "type": "text",
      },
      {
        "content": {
          "ariaLabel": "Cancel item: /root/file2.jpg",
          "disabled": true,
          "icon": "cancel",
          "onClick": [Function],
        },
        "key": "action-2",
        "type": "button",
      },
    ],
    "key": "2",
  },
]
`;

exports[`getDeleteActionViewTableData should have remove handler on queued files 1`] = `
[
  {
    "content": [
      {
        "content": {
          "icon": "action-queued",
          "text": "file1.txt",
        },
        "key": "key-1",
        "type": "text",
      },
      {
        "content": {
          "text": "folder/subfolder/",
        },
        "key": "folder-1",
        "type": "text",
      },
      {
        "content": {
          "text": "txt",
        },
        "key": "type-1",
        "type": "text",
      },
      {
        "content": {
          "text": "1.0 kB",
        },
        "key": "size-1",
        "type": "text",
      },
      {
        "content": {
          "text": "Queued",
        },
        "key": "status-1",
        "type": "text",
      },
      {
        "content": {
          "ariaLabel": "Cancel item: folder/subfolder/file1.txt",
          "disabled": false,
          "icon": "cancel",
          "onClick": [Function],
        },
        "key": "action-1",
        "type": "button",
      },
    ],
    "key": "1",
  },
]
`;

exports[`getDeleteActionViewTableData should return correct table data for all task statuses: tabledata 1`] = `
[
  {
    "content": [
      {
        "content": {
          "icon": "action-queued",
          "text": "file1.txt",
        },
        "key": "key-1",
        "type": "text",
      },
      {
        "content": {
          "text": "",
        },
        "key": "folder-1",
        "type": "text",
      },
      {
        "content": {
          "text": "txt",
        },
        "key": "type-1",
        "type": "text",
      },
      {
        "content": {
          "text": "1.0 kB",
        },
        "key": "size-1",
        "type": "text",
      },
      {
        "content": {
          "text": "Queued",
        },
        "key": "status-1",
        "type": "text",
      },
      {
        "content": {
          "ariaLabel": "Cancel item: file1.txt",
          "disabled": false,
          "icon": "cancel",
          "onClick": [Function],
        },
        "key": "action-1",
        "type": "button",
      },
    ],
    "key": "1",
  },
  {
    "content": [
      {
        "content": {
          "icon": "action-progress",
          "text": "file2.jpg",
        },
        "key": "key-2",
        "type": "text",
      },
      {
        "content": {
          "text": "",
        },
        "key": "folder-2",
        "type": "text",
      },
      {
        "content": {
          "text": "jpg",
        },
        "key": "type-2",
        "type": "text",
      },
      {
        "content": {
          "text": "1.0 kB",
        },
        "key": "size-2",
        "type": "text",
      },
      {
        "content": {
          "text": "In Progress",
        },
        "key": "status-2",
        "type": "text",
      },
      {
        "content": {
          "ariaLabel": "Cancel item: file2.jpg",
          "disabled": true,
          "icon": "cancel",
          "onClick": [Function],
        },
        "key": "action-2",
        "type": "button",
      },
    ],
    "key": "2",
  },
  {
    "content": [
      {
        "content": {
          "icon": "action-success",
          "text": "file3.pdf",
        },
        "key": "key-3",
        "type": "text",
      },
      {
        "content": {
          "text": "",
        },
        "key": "folder-3",
        "type": "text",
      },
      {
        "content": {
          "text": "pdf",
        },
        "key": "type-3",
        "type": "text",
      },
      {
        "content": {
          "text": "1.0 kB",
        },
        "key": "size-3",
        "type": "text",
      },
      {
        "content": {
          "text": "Completed",
        },
        "key": "status-3",
        "type": "text",
      },
      {
        "content": {
          "ariaLabel": "Cancel item: file3.pdf",
          "disabled": true,
          "icon": "cancel",
          "onClick": [Function],
        },
        "key": "action-3",
        "type": "button",
      },
    ],
    "key": "3",
  },
  {
    "content": [
      {
        "content": {
          "icon": "action-error",
          "text": "file4.doc",
        },
        "key": "key-4",
        "type": "text",
      },
      {
        "content": {
          "text": "",
        },
        "key": "folder-4",
        "type": "text",
      },
      {
        "content": {
          "text": "doc",
        },
        "key": "type-4",
        "type": "text",
      },
      {
        "content": {
          "text": "1.0 kB",
        },
        "key": "size-4",
        "type": "text",
      },
      {
        "content": {
          "text": "Failed",
        },
        "key": "status-4",
        "type": "text",
      },
      {
        "content": {
          "ariaLabel": "Cancel item: file4.doc",
          "disabled": true,
          "icon": "cancel",
          "onClick": [Function],
        },
        "key": "action-4",
        "type": "button",
      },
    ],
    "key": "4",
  },
  {
    "content": [
      {
        "content": {
          "icon": "action-canceled",
          "text": "file5",
        },
        "key": "key-5",
        "type": "text",
      },
      {
        "content": {
          "text": "",
        },
        "key": "folder-5",
        "type": "text",
      },
      {
        "content": {
          "text": "",
        },
        "key": "type-5",
        "type": "text",
      },
      {
        "content": {
          "text": "1.0 kB",
        },
        "key": "size-5",
        "type": "text",
      },
      {
        "content": {
          "text": "Canceled",
        },
        "key": "status-5",
        "type": "text",
      },
      {
        "content": {
          "ariaLabel": "Cancel item: file5",
          "disabled": true,
          "icon": "cancel",
          "onClick": [Function],
        },
        "key": "action-5",
        "type": "button",
      },
    ],
    "key": "5",
  },
]
`;
